implimented profile edit page but dynamic viewuing left

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,7 @@
     </string>
     <string name="jacob_w">jacob_w</string>
     <string name="search">Search</string>
+
+    <string name="bio_text">Digital goodies designer <font color='#A13D36'>@pixsellz </font><br/> Everything is designed.</string>
+
 </resources>
